# Phantom

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Update.md  loadenv.sh
AnalysisCore/: CMakeLists.txt  phantom_analysis.cpp
AnalysisCore/include/Analyzer/: EnergyDepositionCalibrator.h  ExampleAnalyzer.h  Formatter.h  ImagingUsingCalibdEdx.h  ImagingUsingIntersection2D.h  ImagingUsingIntersection3D.h  ImagingUsingdEdx.h  PAnalyzer.h  PCTAnalyzer.h  PStepDump.h  ScintDigitizer.h
AnalysisCore/include/Core/: AlgoManager.h  AnaData.h  AnalyzerManager.h  ConfigManager.h  ControlManager.h  EventReader.h  GeometryHelper.h
AnalysisCore/include/Event/: AnaEvent.h  EventReader.h  EventStoreAndWriter.h
AnalysisCore/source/Analyzer/: EnergyDepositionCalibrator.cpp  ExampleAnalyzer.cpp  Formatter.cpp  ImagingUsingCalibdEdx.cpp  ImagingUsingIntersection2D.cpp  ImagingUsingIntersection3D.cpp  ImagingUsingdEdx.cpp  PAnalyzer.cpp  PCTAnalyzer.cpp  PStepDump.cpp  ScintDigitizer.cpp  ScintDigitizer.cpp.bak
AnalysisCore/source/Core/: AnalyzerManager.cpp  ConfigManager.cpp  ControlManager.cpp  EventReader.cpp  GeometryHelper.cpp
AnalysisCore/src/: AnaProcessor.cpp  ConfigManager.cpp  ControlManager.cpp  EventReader_Convert.cpp  EventStoreAndWriter.cpp
DAna_Old/include/Core/: AnaProcessor.h  ControlManager.h
DAna_Old/include/Event/: EventReader.h
DAna_Old/src/: AlgoManager.cpp  AnaData.cpp  AnaEvent.cpp  EventReader.cpp
DataIO/: CMakeLists.txt
DataIO/include/: PCTEventLinkDef.h  PEventLinkDef.h
DataIO/include/DataIO/: CollectionMap.h  MCParticle.h  PCTDigi.h  PCTEvent.h  PCTHit.h  PCTStep.h  PCTXData.h  PEvent.h  PHit.h  PStep.h
DataIO/include/EventDump/: EventDump.h
DataIO/source/: CollectionMap.cpp  EventDump.cpp  PCTEvent.cpp  PEvent.cpp
External_Tools/: CMakeLists.txt
External_Tools/CADMesh/: CADMesh.hh  CMakeLists.txt
External_Tools/CADMesh/include/: BuiltInReader.hh  CADMesh.hh  CADMeshTemplate.hh  Exceptions.hh  FileTypes.hh  Lexer.hh  LexerMacros.hh  Mesh.hh  OBJReader.hh  PLYReader.hh  Reader.hh  STLReader.hh  TessellatedMesh.hh
External_Tools/CADMesh/src/: BuiltInReader.cc  CADMeshTemplate.cc  CADMeshTemplate.impl.cc  Exceptions.cc  FileTypes.cc  Lexer.cc  Mesh.cc  OBJReader.cc  PLYReader.cc  Reader.cc  STLReader.cc  TessellatedMesh.cc
External_Tools/DICOM/: CMakeLists.txt  CMakeLists.txt.independent  DICOM.cc  Makefile  cmake_install.cmake  loadenv.sh  run.mac  vis.mac
External_Tools/DICOM/dicomReader/: CMakeLists.txt
External_Tools/DICOM/new/: lobster_00000.dcm  lobster_00001.dcm  lobster_00002.dcm  lobster_00003.dcm  lobster_00004.dcm  lobster_00005.dcm  lobster_00006.dcm  lobster_00007.dcm  lobster_00008.dcm  (+47 more)
Organism_Models/: liver.stl
PctSim/: CMakeLists.txt  CmdParser.hh  Json2Geant4Macro.cpp  Json2Geant4Macro.hh  PctAddMaterial.cpp  PctDumpElement.cpp  PctDumpMaterial.cpp  PctDumpParticleTable.cpp  PctDumpRawFile.cpp  PctTSim.cpp
PctSim/sim/detector/: PctDetectorConstruction.cc  PctDetectorConstruction.hh  PctSdEcal.cc  PctSdEcal.hh  PctSdEcalHit.cc  PctSdEcalHit.hh  PctSdTof.cc  PctSdTof.hh  PctSdTofHit.cc  PctSdTofHit.hh  PctSdTracker.cc  PctSdTracker.hh  PctSdTrackerHit.cc  PctSdTrackerHit.hh  PctSdVHit.cc  PctSdVHit.hh  PctSharedCode.cc  PctSharedCode.hh  PctTrajectory.cc  PctTrajectory.hh  PctTrajectoryPoint.cc  PctTrajectoryPoint.hh
PctSim/sim/hooks/: PctActionInitialization.cc  PctActionInitialization.hh  PctEventAction.cc  PctEventAction.hh  PctPrimaryGeneratorAction.cc  PctPrimaryGeneratorAction.hh  PctRunAction.cc  PctRunAction.hh  PctSteppingAction.cc  PctSteppingAction.hh  PctTrackingAction.cc  PctTrackingAction.hh
PctSim/sim/io/: PctDataType.cc  PctDataType.hh  PctROOTReader.cc  PctROOTReader.hh  PctROOTWriter.cc  PctROOTWriter.hh  PctRawReader.cc  PctRawReader.hh  PctRawWriter.cc  PctRawWriter.hh
PctSim/sim/io/unused/: PctRawReader2ROOT.cc  PctRawReader2ROOT.hh  PctRootManager.cc  PctRootManager.hh
PctSim/sim/run/: PctDigiRun.cc  PctDigiRun.hh  PctFullRun.cc  PctFullRun.hh  PctIdealRunA.cc  PctIdealRunA.hh  PctIdealRunB.cc  PctIdealRunB.hh  PctIdealRunC.cc  PctIdealRunC.hh  PctRunOpt.cc  PctRunOpt.hh
PctSim/sim/run/unused/: PctFullRunX.cc  PctFullRunX.hh
PctSim/sim/tools/: PctJsonManager.hh  PctNamedQueue.hh  PctProtectedQueue.hh
PctSim/sim/unused/: CmdParser.hpp  TShortEvent.cc  TShortEvent.hh  TStackingAction.cc  TStackingAction.hh  TTrackInformation.cc  TTrackInformation.hh  df_allocator.hh
Scripts/: default.yaml  gui.mac  material.yaml
Scripts/lib/: libPCTEvent.rootmap  libPCTEvent_rdict.pcm
Scripts/scripts/: G4History.macro  ana.yaml  image_2d_dedx.root  image_2d_intersection.root
SimCore/: CMakeLists.txt  phantom_simulation.cpp
SimCore/include/Control/: Control.h
SimCore/include/Digitization/: DetectorSD.h  digitize.h
SimCore/include/Geometry/: DetectorConstruction.h  HumanModel.h  MatrixPlacement.h
SimCore/include/RootManager/: RootManager.h
SimCore/include/UserAction/: EventAction.h  PrimaryGeneratorAction.h  RunAction.h  SteppingAction.h  TrackingAction.h
SimCore/source/Control/: Control.cpp
SimCore/source/Digitizaiton/: DetectorSD.cpp  digitize.cpp
SimCore/source/Geometry/: DetectorConstruction.cpp  HumanModel.cpp  MatrixPlacement.cpp
SimCore/source/RootManager/: RootManager.cpp
SimCore/source/UserAction/: EventAction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SteppingAction.cpp  TrackingAction.cpp
new/: lobster_00000.dcm  lobster_00004.dcm  lobster_00005.dcm  lobster_00006.dcm  lobster_00007.dcm  lobster_00008.dcm  lobster_00009.dcm  lobster_00010.dcm  lobster_00011.dcm  lobster_00015.dcm  lobster_00016.dcm  lobster_00022.dcm  lobster_00024.dcm  lobster_00025.dcm  lobster_00027.dcm  lobster_00029.dcm  lobster_00031.dcm  lobster_00032.dcm  lobster_00033.dcm  lobster_00036.dcm  lobster_00037.dcm  lobster_00039.dcm  lobster_00040.dcm  lobster_00043.dcm  lobster_00044.dcm  lobster_00045.dcm  lobster_00046.dcm  lobster_00047.dcm  lobster_00048.dcm  lobster_00049.dcm  lobster_00051.dcm  lobster_00053.dcm  lobster_00054.dcm
share/Scripts/: default.yaml  vis.mac
(+37 files in other folders)
